--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: '{build}'
 
 environment:
-  DNX_VERSION: '1.0.0-rc1-final'
+  DNX_VERSION: '1.0.0-rc1-update1'
 
 cache:
   - '%USERPROFILE%\.dnx\runtimes -> appveyor.yml'
