--- a/net/DevExtreme.AspNet.Data/project.json
+++ b/net/DevExtreme.AspNet.Data/project.json
@@ -16,7 +16,7 @@
         "dnxcore50": {
             "dependencies": {
                 "System.ComponentModel.TypeConverter": "4.0.0",
-                "System.Linq.Expressions": "4.0.11-23516",
+                "System.Linq.Expressions": "4.0.10",
                 "System.Linq.Queryable": "4.0.0",
                 "System.Reflection.TypeExtensions": "4.0.0",
                 "System.Text.RegularExpressions": "4.0.0"
