--- a/net/Sample/project.json
+++ b/net/Sample/project.json
@@ -13,7 +13,9 @@
         "EntityFramework.Commands": "7.0.0-rc1-final",
         "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
         "EntityFramework.MicrosoftSqlServer.Design": "7.0.0-rc1-final",
-        "DevExtreme.AspNet.Data": ""
+        "DevExtreme.AspNet.Data": "",
+        "System.Linq.Expressions": "4.0.11-beta-23516"
+
     },
 
     "commands": {
