--- a/net/DevExtreme.AspNet.Data/project.json
+++ b/net/DevExtreme.AspNet.Data/project.json
@@ -13,7 +13,7 @@
 
     "frameworks": {
         "net45": { },
-        "dnxcore50": {
+        "dotnet": {
             "dependencies": {
                 "System.ComponentModel.TypeConverter": "4.0.0",
                 "System.Linq.Expressions": "4.0.10",
