--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ cache:
   - '%USERPROFILE%\.dnx\runtimes -> appveyor.yml'
   - '%USERPROFILE%\.dnx\packages -> appveyor.yml, **\project.json'
   - node_modules
+  - net\packages -> **\packages.config
 
 install:
   - ps: iex ((New-Object Net.WebClient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))
