--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ build_script:
 
 test_script:
   - js-test\node_modules\.bin\jshint js
-  - js-test\node_modules\.bin\node-qunit-phantomjs js-test\test.html
+  - cd js-test && node_modules\.bin\karma start karma.js
   - dnx -p net\DevExtreme.AspNet.Data.Tests test
   - xunit.console.clr4 net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll /appveyor
 
