--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ before_build:
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
 
 build_script:
-  - dotnet build net\DevExtreme.AspNet.Data --quiet
-  - dotnet build net\DevExtreme.AspNet.Data.Tests --quiet  
-  - dotnet build net\Sample --quiet  
+  - dotnet build net\DevExtreme.AspNet.Data
+  - dotnet build net\DevExtreme.AspNet.Data.Tests
+  - dotnet build net\Sample
   - msbuild net\DevExtreme.AspNet.Data.Tests.NET40\DevExtreme.AspNet.Data.Tests.NET40.sln /v:q
 
 test_script:
