--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ obj/
 .vs/
 node_modules/
 net/packages/
+net/DevExtreme.AspNet.Data/release.snk
 /js-test/bower_components/
 /js-test/coverage/
 **/wwwroot/lib/
