--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
     "description": "DevExtreme data layer extension for ASP.NET MVC",
     "authors": [ "Developer Express Inc." ],
     "license": "MIT",
-    "ignore": [ "build", "js-test", "net", "appveyor.yml" ],
+    "ignore": [ "*", "!LICENSE", "!js/*" ],
     "main": [ "js/dx.aspnet.data.js" ]
 }
