--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,8 @@ cache:
   - net\packages -> **\packages.config
 
 install:
-  - ps: iex ((New-Object Net.WebClient).DownloadString('https://raw.githubusercontent.com/dotnet/cli/v1.0.0-rc2/scripts/obtain/install.ps1'))
+  - appveyor DownloadFile https://raw.githubusercontent.com/dotnet/cli/v1.0.0-preview2/scripts/obtain/dotnet-install.ps1
+  - powershell -File dotnet-install.ps1
   - set PATH=%PATH%;%LOCALAPPDATA%\Microsoft\dotnet
   - cd js-test && npm install
   - cd js-test && node_modules\.bin\bower install
