--- a/net/Sample/project.json
+++ b/net/Sample/project.json
@@ -1,27 +1,26 @@
 {
-    "webroot": "wwwroot",
 
     "dependencies": {
         "Microsoft.NETCore.App": {
-            "version": "1.0.0-rc2-*",
+            "version": "1.0.0",
             "type": "platform"
         },
-        "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Diagnostics": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
+        "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
+        "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
+        "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+        "Microsoft.AspNetCore.Mvc": "1.0.0",
+        "Microsoft.AspNetCore.StaticFiles": "1.0.0",
         "Microsoft.AspNetCore.Razor.Tools": {
-            "version": "1.0.0-preview1-final",
+            "version": "1.0.0-preview2-final",
             "type": "build"
         },
-        "Microsoft.Extensions.Logging": "1.0.0-rc2-final",
-        "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
-        "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
-        "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0-rc2-final",
-        "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.0-rc2-final",
+        "Microsoft.Extensions.Logging": "1.0.0",
+        "Microsoft.Extensions.Logging.Console": "1.0.0",
+        "Microsoft.EntityFrameworkCore": "1.0.0",
+        "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
+        "Microsoft.EntityFrameworkCore.SqlServer.Design": "1.0.0",
         "Microsoft.EntityFrameworkCore.Tools": {
-            "version": "1.0.0-preview1-final",            
+            "version": "1.0.0-preview2-final",
             "type": "build"
         },
         "DevExtreme.AspNet.Data": {
@@ -30,28 +29,18 @@
     },
 
     "tools": {
-        "Microsoft.AspNetCore.Razor.Tools": {
-            "version": "1.0.0-preview1-final",
-            "imports": [ "portable-net45" ]
-        },
-        "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
-            "version": "1.0.0-preview1-final",
-            "imports": [ "portable-net45" ]
-        },
-        "Microsoft.EntityFrameworkCore.Tools": {
-            "version": "1.0.0-preview1-final",
-            "imports": "portable-net45"
-        }
+        "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
+        "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
     },
 
     "frameworks": {
-        "netcoreapp1.0": {
-            "imports": [ "dnxcore50", "portable-net45" ]
-        }
+        "netcoreapp1.0": { }
     },
 
     "runtimeOptions": {
-        "gcServer": true
+        "configProperties": {
+            "System.GC.Server": true
+        }
     },
 
     "publishOptions": {
@@ -74,5 +63,4 @@
             ]
         }
     }
-
 }
