--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules/
 net/packages/
 net/DevExtreme.AspNet.Data/release.snk
 /js-test/coverage/
+/js-test/test-bundle.js
 **/wwwroot/lib/
 project.lock.json
 *.suo
