Make script AMD-compliant (#92)

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ obj/
 node_modules/
 net/packages/
 net/DevExtreme.AspNet.Data/release.snk
-/js-test/bower_components/
 /js-test/coverage/
+/js-test/test-bundle.js
 **/wwwroot/lib/
 project.lock.json
 *.suo
