--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,14 +9,12 @@ cache:
   - '%LOCALAPPDATA%\NuGet -> **\packages.config'
   - '%USERPROFILE%\.nuget\packages -> appveyor.yml, **\project.json'
   - js-test\node_modules -> js-test\package.json
-  - js-test\bower_components -> js-test\bower.json
 
 install:
   - appveyor DownloadFile https://raw.githubusercontent.com/dotnet/cli/v1.0.0-preview2/scripts/obtain/dotnet-install.ps1
   - powershell -File dotnet-install.ps1
   - set PATH=%PATH%;%LOCALAPPDATA%\Microsoft\dotnet
   - cd js-test && npm install
-  - cd js-test && node_modules\.bin\bower install
 
 before_build:
   - dotnet restore -v minimal
@@ -29,10 +27,12 @@ build_script:
   - dotnet build net\DevExtreme.AspNet.Data.Tests
   - dotnet build net\Sample
   - msbuild net\DevExtreme.AspNet.Data.Tests.NET40\DevExtreme.AspNet.Data.Tests.NET40.sln /v:q
+  - js-test\node_modules\.bin\webpack --config js-test\test-bundle-webpack-config.js
 
 test_script:
   - js-test\node_modules\.bin\jshint js
   - cd js-test && node_modules\.bin\karma start karma.js
+  - cd js-test && node_modules\.bin\karma start karma.js --bundled
   - dotnet test net\DevExtreme.AspNet.Data.Tests -f netcoreapp1
   - xunit.console.clr4 net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll /appveyor
 
