Remove MVC in description

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "devextreme-aspnet-data",
-    "description": "DevExtreme data layer extension for ASP.NET MVC",
+    "description": "DevExtreme data layer extension for ASP.NET",
     "authors": [ "Developer Express Inc." ],
     "license": "MIT",
     "ignore": [ "*", "!LICENSE", "!js/*" ],
