--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "js/dx.aspnet.data.js",
   "dependencies": {
-    "devextreme": "^16.2.0"
+    "devextreme": ">=16.1.0"
   },
   "devDependencies": {
     "jquery": "^2.2.4",
