--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,18 +27,15 @@ build_script:
   - dotnet build net\DevExtreme.AspNet.Data.Tests
   - dotnet build net\Sample
   - msbuild net\DevExtreme.AspNet.Data.Tests.NET40\DevExtreme.AspNet.Data.Tests.NET40.sln /v:q
-  - node_modules\.bin\webpack --config js-test\test-bundle-webpack-config.js
 
 test_script:
-  - node_modules\.bin\jshint js
-  - node_modules\.bin\karma start js-test\karma.js
-  - node_modules\.bin\karma start js-test\karma.js --bundled
+  - npm test
   - dotnet test net\DevExtreme.AspNet.Data.Tests -f netcoreapp1
   - xunit.console.clr4 net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll /appveyor
 
 after_test:
-  - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
   - npm pack
+  - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
