--- a/net/Sample/Properties/launchSettings.json
+++ b/net/Sample/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:49837/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
