--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,16 +10,14 @@ cache:
   - node_modules -> package.json
 
 install:
+  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
   - npm install
-
-before_build:
   - dotnet restore net\DevExtreme.AspNet.Data.sln
   - nuget restore net\DevExtreme.AspNet.Data.sln
-  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
 
 build_script:
-  - msbuild DevExtreme.AspNet.Data.sln /v:q
+  - msbuild net\DevExtreme.AspNet.Data.sln /v:q
 #  - dotnet build net\DevExtreme.AspNet.Data
 #  - dotnet build net\DevExtreme.AspNet.Data.Tests
 #  - dotnet build net\Sample
