--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,7 @@ install:
   - nuget restore net\DevExtreme.AspNet.Data.sln
 
 build_script:
-  - msbuild net\DevExtreme.AspNet.Data.sln /v:q
-#  - dotnet build net\DevExtreme.AspNet.Data
-#  - dotnet build net\DevExtreme.AspNet.Data.Tests
-#  - dotnet build net\Sample
-#  - msbuild net\DevExtreme.AspNet.Data.Tests.NET40\DevExtreme.AspNet.Data.Tests.NET40.sln /v:q
+  - dotnet build net\DevExtreme.AspNet.Data.sln
 
 test_script:
   - npm test
