--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,11 +10,11 @@ cache:
   - node_modules -> package.json
 
 install:
-  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
+  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion -Verbosity quiet && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
   - npm install
   - dotnet restore net\DevExtreme.AspNet.Data.sln
-  - nuget restore net\DevExtreme.AspNet.Data.sln
+  - nuget restore net\DevExtreme.AspNet.Data.sln -Verbosity quiet
 
 build_script:
   - dotnet build net\DevExtreme.AspNet.Data.sln
