--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,32 +4,19 @@ environment:
   RELEASE_KEY_SECRET:
     secure: qK/vt4/ihLipeamB7l+Dng==
 
-cache:
-  - 'netcoredist.exe -> appveyor.yml'
-  - '%LOCALAPPDATA%\NuGet -> **\packages.config'
-  - '%USERPROFILE%\.nuget\packages -> appveyor.yml, **\project.json'
-  - node_modules -> package.json
-
 install:
-  - if not exist netcoredist.exe appveyor DownloadFile https://go.microsoft.com/fwlink/?LinkID=836281 -FileName netcoredist.exe
-  - netcoredist /install /quiet
-  - npm install
-
-before_build:
-  - dotnet restore -v minimal
-  - nuget restore net\DevExtreme.AspNet.Data.Tests.NET40
+  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion -Verbosity quiet && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
-  - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
+  - npm install
+  - dotnet restore net\DevExtreme.AspNet.Data.sln
+  - nuget restore net\DevExtreme.AspNet.Data.sln -Verbosity quiet
 
 build_script:
-  - dotnet build net\DevExtreme.AspNet.Data
-  - dotnet build net\DevExtreme.AspNet.Data.Tests
-  - dotnet build net\Sample
-  - msbuild net\DevExtreme.AspNet.Data.Tests.NET40\DevExtreme.AspNet.Data.Tests.NET40.sln /v:q
+  - dotnet build net\DevExtreme.AspNet.Data.sln
 
 test_script:
   - npm test
-  - dotnet test net\DevExtreme.AspNet.Data.Tests -f netcoreapp1
+  - dotnet test net\DevExtreme.AspNet.Data.Tests\DevExtreme.AspNet.Data.Tests.csproj
   - xunit.console.clr4 net\DevExtreme.AspNet.Data.Tests.NET40\bin\Debug\DevExtreme.AspNet.Data.Tests.dll /appveyor
 
 after_test:
