Revert "use node codecov"
This reverts commit 8d0a3d7e88288a7324480a22047c355464754485.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
 install:
   - if defined RELEASE_KEY_SECRET (nuget install secure-file -ExcludeVersion -Verbosity quiet && secure-file\tools\secure-file -decrypt net\DevExtreme.AspNet.Data\release.snk.enc -secret %RELEASE_KEY_SECRET%)
   - nuget install -Verbosity quiet -ExcludeVersion -OutputDirectory . OpenCover
+  - pip install -q codecov
   - powershell -File build\replace-meta.ps1 %APPVEYOR_BUILD_NUMBER% %APPVEYOR_REPO_TAG_NAME%
   - npm install
   - dotnet restore net\DevExtreme.AspNet.Data.sln
@@ -37,7 +38,7 @@ after_test:
   - if defined RELEASE_KEY_SECRET dotnet pack net\DevExtreme.AspNet.Data --configuration=Release
 
 on_success:
-  - node_modules/.bin/codecov -X gcov -f coverage_netcore.xml coverage_netfx.xml
+  - codecov -X gcov -f coverage_netcore.xml coverage_netfx.xml
 
 artifacts:
   - path: net\DevExtreme.AspNet.Data\bin\Release\*.nupkg
