--- a/net/DevExtreme.AspNet.Data.Tests.NET40/DevExtreme.AspNet.Data.Tests.NET40.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.NET40/DevExtreme.AspNet.Data.Tests.NET40.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\Newtonsoft.Json.5.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
