--- a/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
+++ b/net/DevExtreme.AspNet.Data/DevExtreme.AspNet.Data.csproj
@@ -35,6 +35,8 @@
     <PackageReference Include="System.Linq.Queryable" Version="4.0.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.0.0" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.0.0" />
+    <PackageReference Include="System.Dynamic.Runtime" Version="4.0.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
